--- a/views/home.pug
+++ b/views/home.pug
@@ -9,5 +9,6 @@ html(lang="en")
         title BookStore
     body
         include includes/nav
+        img.banner(src="img/banner.png", alt="banner")
         
         
