--- a/views/home.pug
+++ b/views/home.pug
@@ -10,5 +10,15 @@ html(lang="en")
     body
         include includes/nav
         img.banner(src="img/banner.png", alt="banner")
-        
+
+        section.shop
+            .shop-header
+                img.shop-icon(src="img/shop.svg")
+                h3.shop-text Shop 
+
+            .books
+                each book in books
+                    include includes/bookItem
+                    +book-item(book)
+                
         
