--- a/views/includes/nav.pug
+++ b/views/includes/nav.pug
@@ -2,6 +2,7 @@ nav
             a.logo(href="/")
                 img(src="img/logo.svg", alt="logo")
                 h3 BookStore
+            .signature BookStore
             ul.menu
              li: a.menu-item(href="/sell") Sell
              li: a.menu-item(href="/login") Login
