--- a/public/css/main.css
+++ b/public/css/main.css
@@ -189,3 +189,66 @@ section.shop {
 	font-size: 1.6rem;
 	margin-left: 1rem;
 }
+
+/* /book */
+.book {
+	display: flex;
+	width: 70%;
+	margin: 4rem auto;
+	background-color: rgb(248, 248, 248);
+	padding: 4rem;
+}
+
+.book .about-book {
+	margin-left: 10rem;
+	font-size: 1.3rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.book .about-book .book-name {
+	font-size: 3rem;
+}
+.book .about-book .book-summary-header {
+	margin-top: 2rem;
+	font-size: 1.4rem;
+}
+.book .about-book .book-summary {
+	margin-left: 2rem;
+}
+.book .about-book .book-buy-zone {
+	margin-top: auto;
+	display: flex;
+	align-items: center;
+}
+.book .about-book .book-seller {
+	color: var(--black);
+}
+.book .about-book .book-price {
+	font-weight: 700;
+	margin: 1rem;
+	display: flex;
+	align-items: flex-end;
+}
+.book .about-book .book-price-number {
+	font-size: 2rem;
+}
+
+.book .about-book .add-to-cart {
+	border: 1px solid var(--primary-color);
+	color: var(--primary-color);
+	font-size: 1.6rem;
+	margin: 1rem;
+	cursor: pointer;
+	padding: 0.5rem;
+	transition: all 0.1s ease-out;
+}
+.book .about-book .add-to-cart:hover {
+	color: var(--white-color);
+	background-color: var(--primary-color);
+}
+.book .about-book .extra {
+	font-size: 1rem;
+	margin-left: 1rem;
+}
