--- a/views/home.pug
+++ b/views/home.pug
@@ -1,27 +1,18 @@
-<!DOCTYPE html>
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        link(href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,700;1,900&display=swap", rel="stylesheet")
-        link(href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap", rel="stylesheet")
-        link(rel="shortcut icon", href="favicon.ico", type="image/x-icon")
-        link(rel="stylesheet", type="text/css" href="css/main.css")
-        title BookStore
-    body
-        include includes/nav
-        include includes/category
-        
-        img.banner(src="img/banner.png", alt="banner")
+include includes/head
+body
+    include includes/nav
+    include includes/category
+    
+    img.banner(src="img/banner.png", alt="banner")
 
-        section.shop
-            .shop-header
-                img.shop-icon(src="img/shop.svg")
-                h3.shop-text Shop 
+    section.shop
+        .shop-header
+            img.shop-icon(src="img/shop.svg")
+            h3.shop-text Shop 
 
-            .books
-                each book in books
-                    include includes/bookItem
-                    +book-item(book)
+        .books
+            each book in books
+                include includes/bookItem
+                +book-item(book)
                 
         
