--- a/views/includes/nav.pug
+++ b/views/includes/nav.pug
@@ -1,6 +1,6 @@
 nav
             a.logo(href="/")
-                img(src="img/logo.svg", alt="logo")
+                img(src="../img/logo.svg", alt="logo")
                 h3 BookStore
             .signature BookStore
             ul.menu
