--- a/public/css/main.css
+++ b/public/css/main.css
@@ -252,3 +252,68 @@ section.shop {
 	font-size: 1rem;
 	margin-left: 1rem;
 }
+
+/* login */
+.login {
+	width: 60%;
+	height: 30rem;
+	margin: 5rem auto 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	color: var(--black);
+}
+
+.login .input-wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
+	height: 50%;
+	width: 100%;
+	margin: 4rem 0;
+}
+
+.login .input-group {
+	display: flex;
+	flex-direction: column;
+	width: 40%;
+}
+.login label {
+	margin-bottom: 0.8rem;
+	font-size: 1.5rem;
+}
+.login input {
+	margin-bottom: 2rem;
+	padding: 0.5rem 1rem;
+	width: 100%;
+	border: 1px solid var(--black);
+}
+.login .login-btn {
+	font-size: 1.6rem;
+	font-weight: 700;
+	background-color: var(--primary-color);
+	padding: 0.5rem 1rem;
+	color: var(--white-color);
+	border: 2px solid transparent;
+	cursor: pointer;
+}
+
+.login .login-btn:hover {
+	border: 2px solid var(--primary-color);
+	background-color: var(--white-color);
+	color: var(--black);
+}
+
+.login .forgot-password {
+	text-decoration: none;
+	color: var(--black);
+}
+
+.error {
+	color: var(--primary-color);
+	font-size: 1.3rem;
+	font-weight: 700;
+	opacity: 0;
+}
