improve validators📜 remove login.js and signup.js ❌ add auth.js👮‍♂️ add ability to show errors while loggnig in or signing up🚖🚖

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -314,12 +314,15 @@ section.shop {
 	text-decoration: none;
 	color: var(--black);
 }
+.error-wrapper {
+	text-align: center;
+	margin-bottom: 2rem;
+}
 
 .error {
 	color: var(--primary-color);
 	font-size: 1.3rem;
 	font-weight: 700;
-	opacity: 0;
 }
 a[href="/signup"],
 a[href="/login"] {
