--- a/views/signup.pug
+++ b/views/signup.pug
@@ -16,10 +16,10 @@ body
             .input-group
                 label.confirm-password-label Confirm Password
                 input.form-confirm-password(type="password", name="password")
-            .form-btn Let's Go
-        .error Wrong Credentials!
+            .form-btn(data-type="signup") Let's Go
+        .error-wrapper 
         a.redirect-link(href="/login") Already have an account?
 
-    script(src="js/signup.js")
+    script(src="js/auth.js")
 
         
