add authentication middleware add active attribute to nav links

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -71,6 +71,10 @@ nav .signature {
 	margin-right: -2rem;
 }
 
+a[data-active="true"] {
+	color: var(--primary-color) !important;
+}
+
 /* banner */
 .banner {
 	display: block;
