--- a/views/home.pug
+++ b/views/home.pug
@@ -1,6 +1,7 @@
 include includes/head
 body
     include includes/nav
+    +nav(current,loggedIn)
     include includes/category
     
     img.banner(src="img/banner.png", alt="banner")
