--- a/views/login.pug
+++ b/views/login.pug
@@ -1,6 +1,7 @@
 include includes/head
 body
     include includes/nav
+    +nav(current)
     .form
         h1.form-header You are welcome to come in!
         .input-wrapper
