--- a/views/signup.pug
+++ b/views/signup.pug
@@ -1,6 +1,7 @@
 include includes/head
 body
     include includes/nav
+    +nav(current)
     .form
         h1.form-header Let's create you an account!
         .input-wrapper
