--- a/public/css/main.css
+++ b/public/css/main.css
@@ -333,3 +333,110 @@ a[href="/login"] {
 	font-size: 1.5rem;
 	margin-bottom: 1rem;
 }
+
+/* dashboard */
+
+.sell-btn-wrapper {
+	width: 100%;
+	height: 10vh;
+	margin-top: 3rem;
+	padding: 0 3rem;
+	display: flex;
+	align-items: center;
+}
+.sell-btn-wrapper .sell-btn {
+	position: relative;
+	color: var(--black);
+	text-decoration: none;
+	padding: 0.5rem 3rem;
+	font-size: 1.6rem;
+	font-weight: 300;
+	background-color: rgba(240, 240, 240, 0.7);
+	cursor: pointer;
+	transition: color 0.1s ease-out, background-color 0.1s ease-out;
+}
+.sell-btn-wrapper .sell-btn:hover {
+	background-color: transparent;
+	color: var(--white-color);
+}
+
+.sell-btn-wrapper .sell-btn::before {
+	content: "";
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 10%;
+	z-index: -1;
+	background-color: var(--primary-color);
+	transition: height 0.1s ease-out;
+}
+.sell-btn-wrapper .sell-btn:hover::before {
+	height: 100%;
+}
+
+/* sell book */
+.sell-book-container {
+	width: 70vw;
+	background-color: rgba(240, 240, 240, 0.5);
+	margin: 5rem auto;
+	display: flex;
+	min-height: 70vh;
+	padding: 2rem;
+}
+
+.sell-book-container input[type="file"] {
+	position: absolute;
+	top: 0;
+	z-index: -1;
+}
+.sell-book-container .img {
+	position: relative;
+	width: 25vw;
+	height: 60vh;
+	margin-right: 5rem;
+}
+.sell-book-container label {
+	display: block;
+	height: 100%;
+	width: 100%;
+	background: url("../img/Book-Cover.jpg");
+	background-position: center;
+	background-size: cover;
+	cursor: pointer;
+}
+
+.sell-book-container .about {
+	width: 60%;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+}
+.sell-book-container .about textarea {
+}
+
+.sell-book-container .about > * {
+	margin: 1rem;
+	border: none;
+	background-color: transparent;
+	outline: none;
+	padding: 0.5rem;
+	width: 80%;
+	color: var(--black);
+}
+.sell-book-container .about > *:hover {
+	background-color: rgba(240, 240, 240, 1);
+}
+
+.sell-book-container .about > *:focus {
+	background-color: rgba(240, 240, 240, 1);
+}
+
+.sell-book-container .about .btn {
+	margin: auto;
+	width: auto;
+	padding: 0.5rem 2rem;
+	cursor: pointer;
+	background-color: var(--black);
+	color: var(--white-color);
+}
