add ability to remove books

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -9,5 +9,5 @@ body
             each book in books
                 include includes/ownBookItem
                 +ownBookItem(book)
-             
+script(src="/js/dashboard.js")
     
