--- a/views/includes/ownBookItem.pug
+++ b/views/includes/ownBookItem.pug
@@ -1,7 +1,7 @@
 mixin ownBookItem(book)
     .book-item(id=`${book._id}`)
         img.book-cover(src=`${book.img}`)
-        .book-quantity-wrapper(title="restock")
+        .book-quantity-wrapper(title="restock",onclick=`restock('${book._id}')`)
             .book-quantity= book.quantity
             img.icon.book-restock(src="/img/bolt.svg")
         .book-remove-btn(title="remove", onclick=`removeBook('${book._id}',this)`)
