--- a/views/includes/category.pug
+++ b/views/includes/category.pug
@@ -1,16 +1,17 @@
-.categories
-    a.category(href="/category/non-fiction")
-        img.cat-icon(src="img/invention.svg")
-        .cat-name Non-Fiction
-    a.category(href="/category/fiction")
-        img.cat-icon(src="img/brush-alt.svg")
-        .cat-name Fiction
-    a.category(href="/category/motivation")
-        img.cat-icon(src="img/bolt.svg")
-        .cat-name Motivation
-    a.category(href="/category/novel")
-        img.cat-icon(src="img/road.svg")
-        .cat-name Novel
-    a.category(href="/category/biography")
-        img.cat-icon(src="img/user.svg")
-        .cat-name Biography
+mixin category(active)
+    .categories
+        a.category(href="/category/non-fiction", class=`${active === "non-fiction" ?"active":"" }` )
+            img.cat-icon(src="/img/invention.svg")
+            .cat-name Non-Fiction
+        a.category(href="/category/fiction", class=`${active === "fiction" ?"active":"" }`)
+            img.cat-icon(src="/img/brush-alt.svg")
+            .cat-name Fiction
+        a.category(href="/category/motivation", class=`${active === "motivation" ?"active":"" }`)
+            img.cat-icon(src="/img/bolt.svg")
+            .cat-name Motivation
+        a.category(href="/category/novel", class=`${active === "novel"?"active":"" }`)
+            img.cat-icon(src="/img/road.svg")
+            .cat-name Novel
+        a.category(href="/category/biography", class=`${active === "biography" ?"active":"" }`)
+            img.cat-icon(src="/img/user.svg")
+            .cat-name Biography
