--- a/views/includes/nav.pug
+++ b/views/includes/nav.pug
@@ -1,7 +1,7 @@
 mixin nav(current,loggedIn)
     nav
         a.logo(href="/")
-            img(src="../img/logo.svg", alt="logo")
+            img(src="/img/logo.svg", alt="logo")
             h3 BookStore
         .signature BookStore
         ul.menu
