--- a/public/css/main.css
+++ b/public/css/main.css
@@ -178,7 +178,8 @@ section.shop {
 	align-items: center;
 	text-decoration: none;
 	color: var(--black);
-	padding: 3rem;
+	padding: 1.5rem;
+	margin: 0 1.5rem;
 	transition: all 0.2s ease-out;
 }
 .categories .category:hover,
