--- a/views/home.pug
+++ b/views/home.pug
@@ -17,4 +17,4 @@ body
                 include includes/bookItem
                 +book-item(book)
                 
-        
+    script(src="/js/addToCart.js")
