--- a/public/css/main.css
+++ b/public/css/main.css
@@ -491,3 +491,72 @@ a[href="/login"] {
 	color: var(--black);
 	margin: 2rem 0;
 }
+
+/* cart */
+
+.cart {
+	width: 80%;
+	margin: auto;
+}
+.cart-item {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 0.5rem 1.5rem;
+	margin: 1rem;
+	transition: all 0.1s ease-out;
+	background-color: rgba(240, 240, 240, 0.2);
+}
+
+.cart-header {
+	margin-top: 2rem;
+	font-size: 2.2rem;
+	margin-left: 3rem;
+	color: var(--black);
+}
+
+.cart-item:hover {
+	background-color: rgba(240, 240, 240, 0.3);
+}
+.cart-item .cart-item-name {
+	text-decoration: none;
+	color: var(--black);
+	font-size: 1.6rem;
+}
+.cart-item .cart-item-name:hover {
+	text-decoration: underline;
+}
+
+.cart-item .cart-item-meta {
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+}
+
+.cart-item-remove {
+	padding: 0.5rem;
+	font-size: 1.2rem;
+	background-color: rgba(256, 0, 0, 0.15);
+	cursor: pointer;
+	color: var(--black);
+}
+.cart-item-remove:hover {
+	color: var(--white-color);
+	background-color: rgba(256, 0, 0, 0.4);
+}
+
+.cart-buy-zone {
+	margin-top: 2rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 1.6rem;
+	color: var(--black);
+}
+
+.order-btn {
+	padding: 0.5rem 1rem;
+	background-color: var(--black);
+	color: var(--white-color);
+	cursor: pointer;
+}
