--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -9,5 +9,8 @@ body
             each book in books
                 include includes/ownBookItem
                 +ownBookItem(book)
+    include includes/pagination
+    +pagination(parseInt(totalPages),parseInt(currentPage))
+    
 script(src="/js/dashboard.js")
     
