enable disable pagination if total pages no more than 1

--- a/views/includes/pagination.pug
+++ b/views/includes/pagination.pug
@@ -1,5 +1,5 @@
 mixin pagination(totalPages,currentPage)
-    if(totalPages && currentPage)
+    if totalPages > 1
         .pagination
             if currentPage-1 >= 1
                 a.pagination-btn(href=`?page=${currentPage-1}`) Prev
