--- a/views/includes/bookItem.pug
+++ b/views/includes/bookItem.pug
@@ -1,10 +1,10 @@
 mixin book-item(book)
     .book-item
-        a(href=`/book/${book._id}`): img.book-cover(src=`${book.img}`)
+        a(href=`/book/${book._id}`): img.book-cover(src=assetUrl(`${book.img}`), src2=`${book.img}`)
         a(href=`/book/${book._id}`).book-name= book.name
         .cart-btn(onclick=book.quantity?`addToCart('${book._id}')`:"")
             .book-price= `$${book.price}`
             if book.quantity
-                img(src="/img/cart.svg", alt="add to cart")
+                img(src=assetUrl("/img/cart.svg"),src2="/img/cart.svg", alt="add to cart")
         .quantity= book.quantity ?`${book.quantity} left!`:"out of stock!"
             
