--- a/views/login.pug
+++ b/views/login.pug
@@ -16,6 +16,6 @@ body
         a.redirect-link(href="/signup") Signup!
         a.redirect-link(href="/forgot-password") Forgot your password?
 
-    script(src="js/auth.js")
+    script(src=assetUrl("js/auth.js"))
 
         
