--- a/views/signup.pug
+++ b/views/signup.pug
@@ -21,6 +21,6 @@ body
         .error-wrapper 
         a.redirect-link(href="/login") Already have an account?
 
-    script(src="js/auth.js")
+    script(src=assetUrl("js/auth.js"))
 
         
