--- a/views/cart.pug
+++ b/views/cart.pug
@@ -14,4 +14,4 @@ body
                 .order-btn= `$${totalPrice} Checkout!`
 
     script(src="https://js.stripe.com/v3/")
-    script(src="/js/cart.js")
+    script(src=assetUrl("/js/cart.js"))
