--- a/views/error.pug
+++ b/views/error.pug
@@ -40,7 +40,7 @@ html(lang="en")
         .wrapper
             .img-wrapper
                 img(src="/img/404.png", alt="404")
-                a(href="https://icons8.com") Photo by icon8
+                a(href=assetUrl("https://icons8.com")) Photo by icon8
             div
                 h1= msg
                 a(href="/") Go Home
