add cdn to 404 page

--- a/views/error.pug
+++ b/views/error.pug
@@ -39,8 +39,8 @@ html(lang="en")
         
         .wrapper
             .img-wrapper
-                img(src="/img/404.png", alt="404")
-                a(href=assetUrl("https://icons8.com")) Photo by icon8
+                img(src=assetUrl("/img/404.png"), alt="404")
+                a(href="https://icons8.com") Photo by icon8
             div
                 h1= msg
                 a(href="/") Go Home
