add src2 to all cdn src's

--- a/views/book.pug
+++ b/views/book.pug
@@ -22,4 +22,4 @@ body
                     div out of stock
                 div.extra inc. taxes
                 div.extra free delivery
-    script(src=assetUrl("/js/addToCart.js"))
+    script(src=assetUrl("/js/addToCart.js"),src2="/js/addToCart.js")
