--- a/views/error.pug
+++ b/views/error.pug
@@ -39,7 +39,7 @@ html(lang="en")
         
         .wrapper
             .img-wrapper
-                img(src=assetUrl("/img/404.png"), alt="404")
+                img(src=assetUrl("/img/404.png"), src2="/img/404.png", alt="404")
                 a(href="https://icons8.com") Photo by icon8
             div
                 h1= msg
