--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -6,5 +6,5 @@ html(lang="en")
         link(href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,700;1,900&display=swap", rel="stylesheet")
         link(href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap", rel="stylesheet")
         link(rel="shortcut icon", href="../favicon.ico", type="image/x-icon")
-        link(rel="stylesheet", type="text/css" href=assetUrl("/css/main.css"))
+        link(rel="stylesheet", type="text/css" href="/css/main.css")
         title BookStore
