--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -12,5 +12,5 @@ body
     include includes/pagination
     +pagination(parseInt(totalPages),parseInt(currentPage))
     
-script(src=assetUrl("/js/dashboard.js"),src2="/js/dashboard.js")
+script(src="/js/dashboard.js")
     
