--- a/views/signup.pug
+++ b/views/signup.pug
@@ -21,6 +21,6 @@ body
         .error-wrapper 
         a.redirect-link(href="/login") Already have an account?
 
-    script(src=assetUrl("/js/auth.js"),src2=/"js/auth.js")
+    script(src=/"js/auth.js")
 
         
